# vegabase

./: .gitignore  .pre-commit-config.yaml  Makefile  publish_package.py  pyproject.toml
examples/: README.md
examples/basic-app/: .gitignore  README.md  package.json  pyproject.toml
examples/basic-app/backend/: main.py
examples/basic-app/frontend/pages/: Home.jsx  Home.tsx
examples/posts/: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
examples/posts/backend/: initial.py  main.py
examples/posts/backend/db/: schema.py
examples/posts/backend/routes/: posts.py
examples/posts/frontend/pages/: Home.jsx  Home.tsx
examples/posts/frontend/pages/Posts/: Create.jsx  Create.tsx  Index.jsx  Index.tsx
examples/tasks-app/: README.md  package.json  pyproject.toml  tsconfig.json
examples/tasks-app/backend/: db.py  main.py
examples/tasks-app/frontend/: types.ts
examples/tasks-app/frontend/components/: Avatar.jsx  Avatar.tsx
examples/ticketing/: README.md  package.json  pyproject.toml  tsconfig.json
examples/ticketing/backend/: main.py
examples/ticketing/frontend/: styles.css  types.ts
src/pyreact_start/: __init__.py  cli.py  inertia.py
src/pyreact_start/db/: README.md  __init__.py  async_database.py  database.py  hooks.py  schema.py  types.py
src/pyreact_start/ts/: package.json
src/vegabase/: __init__.py  cli.py  config.py  default_settings.toml  renderer.py
src/vegabase/ts/: package.json  tsconfig.json
tests/: test_async_db.py  test_db.py  test_hooks.py  test_inertia.py  test_manifest.py  test_renderer.py  test_schema.py
(+28 files in other folders)
