[project]
name = "{{project_name}}"
version = "0.1.0"
description = "A PyReact Start app with posts example"
requires-python = ">=3.11"
dependencies = [
    "pyreact-start",
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.0.0"]

[dependency-groups]
dev = ["ruff>=0.8.0", "ty>=0.0.1a6"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
